# recruitment-portal

./: Cargo.toml  README.md  database-schema.sql
backend/: .env  Cargo.toml
backend/src/: main.rs
backend/src/entities/: event.rs  event_invitee.rs  message.rs  message_chain.rs  message_group.rs  message_recipient.rs  mod.rs  note.rs  organization.rs  organization_events.rs  prelude.rs  process_events.rs  process_organizations.rs  recruitment_process.rs  status.rs  user.rs  user_group.rs  user_organizations.rs  user_processes.rs  user_statuses.rs
backend/src/handlers/: events.rs  message_chains.rs  mod.rs  organizations.rs  processes.rs  users.rs
backend/src/routes/: cas.rs  events.rs  message_chains.rs  mod.rs  organizations.rs  processes.rs  users.rs
frontend/: package-lock.json
frontend/pages/: events.js  index.js  message_chains.js  organizations.js  processes.js  users.js
frontend/utils/: api.js
src/: handlers.rs  main.rs
