[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.5"
actix-identity = "0.6.0"
actix-web = { version = "4.4.0" }
actix-session = { version = "0.8.0", features = ["cookie-session"] }
dotenvy = "0.15.7"
reqwest = { version = "0.11.22", features = ["rustls-tls"] }
sea-orm = { version = "0.12.8", features = ["sqlx-mysql"] }
serde = { version = "1", features = ["derive"] }